fix(countries) 'changed table-responsive class place in markup' -m 'also removed unnecessary markup in table and improved display on mobile'

--- a/frontend/css/table_style_20180221.css
+++ b/frontend/css/table_style_20180221.css
@@ -25,6 +25,12 @@
     vertical-align: middle
 }
 
+@media (max-width: 425px) {
+    .table > tbody > tr > td {
+        max-width: 200px;
+    }
+}
+
 .table-hover > tbody > tr:hover {
     background-color: rgba(0,120,153,.3);
 }
